--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,15 +8,26 @@
   font-weight: normal;
 }
 
-a,
-.green {
+a {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: var(--color-text);
   transition: 0.4s;
+}
+
+nav a.router-link-exact-active {
+  color: rgb(100, 149, 237);
+}
+
+nav a.router-link-exact-active:hover {
+  background-color: transparent;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: rgba(100, 149, 237, 0.2);
   }
+}
+
+.chart {
+  margin: 1rem 0;
 }
